--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   backend:
     build: 
@@ -16,7 +14,7 @@ services:
   frontend:
     build:
       context: ./GameStore.Frontend
-      dockerfile: Dockerfile
+      dockerfile: DockerFile
     ports:
       - "5002:8080"
     depends_on:
