--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   frontend:
     build:
       context: ./GameStore.Frontend
-      dockerfile: DockerFile
+      dockerfile: Dockerfile
     ports:
       - "5002:8080"
     depends_on:
