--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   backend:
-    image: oshadakavinda2/game-store-backend:latest
+    build: 
+      context: ./GameStore.Api
+      dockerfile: Dockerfile
     ports:
       - "5274:5274"
     environment:
@@ -10,7 +12,9 @@ services:
     restart: always
 
   frontend:
-    image: oshadakavinda2/game-store-frontend:latest
+    build:
+      context: ./GameStore.Frontend
+      dockerfile: Dockerfile
     ports:
       - "5002:8080"
     depends_on:
